# Bilibili-VTuber-video-audio-to-text-subtitles

./: .gitignore  README.md  input.txt  pyproject.toml  requirements.txt
scripts/: autodl_common.py  autodl_one_click.py  autodl_one_click.sh  autodl_run.py  autodl_run.sh  autodl_setup.py  autodl_setup.sh
src/vtuber_subtitles/: asr.py  audio.py  cli.py  downloader.py  models.py  pipeline.py  separator.py
